corrected relative links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <title></title>
   <meta charset="UTF-16">
-  <link rel="stylesheet" type="text/css" href="/css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
@@ -40,7 +40,7 @@
 
     <p>So, let's go exploring.</p>
 
-    <img src="/media/letsgoexploring.jpg" alt="Calvin Hobbes Let's Go Exploring">
+    <img src="media/letsgoexploring.jpg" alt="Calvin Hobbes Let's Go Exploring">
 
     <h2>Questions?</h2>
     <p>Get in touch with me over twitter or email.</p>
@@ -49,9 +49,9 @@
     <p>You can find the source code for this page here. Feel free to remix it.</p>
     <p>Spot a typo, or have a suggestion to improve this post? You can edit it here. </p>
 
-  <script src="/js/libraries/p5.js"></script>
-  <script src="/js/libraries/p5.dom.js"></script>
-  <script src="/js/libraries/p5.sound.js"></script>
+  <script src="js/libraries/p5.js"></script>
+  <script src="js/libraries/p5.dom.js"></script>
+  <script src="js/libraries/p5.sound.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
   <script type="text/javascript">
    function isScrolledIntoView(elem)
@@ -72,7 +72,7 @@
   <script type="text/javascript">javascript:(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();stats.domElement.style.cssText='position:fixed;left:0;top:0;z-index:10000';document.body.appendChild(stats.domElement);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='//rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()
   </script>
 
-  <script type="text/javascript" src="/js/sketches/warpedcircles.js"></script>
+  <script type="text/javascript" src="js/sketches/warpedcircles.js"></script>
   <script type="text/javascript"> new p5(warpedcircles, "warpedcircles"); </script>
 
 </body>
