added remix links

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     <h2>Questions?</h2>
     <p>Get in touch with me over twitter or email.</p>
 
-    <h2>References</h2>
-    <p>You can find the source code for this page here. Feel free to remix it.</p>
-    <p>Spot a typo, or have a suggestion to improve this post? You can edit it here. </p>
+    <h2>Remix</h2>
+    <p>You can find the source code for this site here. Feel free to remix it. This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons CC BY 4.0</a> License.</p>
+    <p>Spot a typo? Fix it <a href = "https://github.com/aatishb/science-sandbox/blob/gh-pages/index.html">here</a>a>.</p>
+    <p>Ideas on how to make this better? Drop them <a href = "https://github.com/aatishb/science-sandbox/issues">here</a>a>.</p>
 
   <script src="js/libraries/p5.js"></script>
   <script src="js/libraries/p5.dom.js"></script>
