--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-  <title></title>
+  <title>Science Sandbox</title>
   <meta charset="UTF-16">
+  <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
