making css responsive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 
-<div class="content">
+<div class="container">
 
   <div id="warpedcircles" align="center"></div>
 
@@ -51,6 +51,7 @@
     <p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons CC BY 4.0</a> License. Feel free to adapt and remix it.</p>
     <p>Spot a typo? Fix it <a href = "https://github.com/aatishb/science-sandbox/blob/gh-pages/index.html">here</a>.</p>
     <p>Ideas on how to make this better? Drop them <a href = "https://github.com/aatishb/science-sandbox/issues">here</a>.</p>
+</div>
 
   <script src="js/libraries/p5.js"></script>
   <script src="js/libraries/p5.dom.js"></script>
